# BCJH-Metropolis

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Readme.md  build  changeEncoding.py  config.hpp  data.min.json  loadToolEquipped.hpp  rule.hpp  toolEquipped.hpp  userData.json
.github/ISSUE_TEMPLATE/: 计算分数错误.md
.github/workflows/: UpdateData.yml  UpdateEmscripten.yml  UpdateEmscriptenForward.yml  UpdateGameData.yml  buildTest.yml  c-cpp.yml  close_pr.yml  cmake.yml  release.yml  release_draft.yml  syncBuildTest.yml
assets/: changeEncoding.py  checkUpdate.sh  config.md  failure.sh  generateRule.py  manuallyUpdate.md  removeSpaces.sh  removeSystemCall.py  retrieveData.bat  retrieveData.ps1  run.sh  厨具样例.csv
assets/win-iconv/: README.md
build_js/: CMakeCache.txt  Makefile  bcjh_1.data  bcjh_1.js  bcjh_1.wasm  bcjh_2.js  bcjh_2.wasm  bcjh_3.data  bcjh_3.js  bcjh_3.wasm  cmake_install.cmake  index.html
data/: checkUpdate.py  data.hpp  data.min.json  data.min.json:Zone.Identifier  foodgameData(1).json  foodgameData.json  getData.sh  ruleData.json  update.py  updateWIN.py  userData (2).json  userData json  userData.hpp  userData.jason  userData.json  userData.json.txt  userData.json:Zone.Identifier  userData_ajdx.json  userData_jlm.json
in/: name2id.py
src/: Calculator.cpp  Calculator.hpp  Chef.cpp  Chef.hpp  Randomizer.cpp  Randomizer.hpp  Recipe.cpp  Recipe.hpp  SARunner.cpp  SARunner.hpp  States.cpp  States.hpp  StatesRecorder.hpp  Types.cpp  Types.hpp  Values.cpp  Values.hpp  activityRule.hpp  banquetRule.hpp  banquetRuleGen.cpp  banquetRuleGen.hpp  bcjh.cpp  bcjh_js.cpp  bcjh_js.hpp  bcjh_js_cpp.cpp  bcjh_win.cpp  exception.hpp  functions.cpp  functions.hpp  generateRule.py  loadToolEquipped.hpp  plot.py  run.cpp  run.hpp  run.py  types.cpp  types.hpp
src/include/: CMakeLists.txt
src/utils/: CMakeLists.txt  Printer.cpp  Printer.hpp  ProgressBar.cpp  ProgressBar.hpp  json.cpp  json.hpp  math.hpp
